--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "compression": "^1.7.4",
+    "dotenv": "^16.4.5",
     "helmet": "^7.1.0",
     "mongoose": "^8.2.3",
     "reflect-metadata": "^0.2.0",
