--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.0",
     "@nestjs/throttler": "^5.1.2",
+    "amqplib": "^0.10.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "compression": "^1.7.4",
     "helmet": "^7.1.0",
-    "mongoose": "^8.2.3",
+    "mongoose": "^8.2.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
