--- a/workers-frontend/tsconfig.json
+++ b/workers-frontend/tsconfig.json
@@ -13,12 +13,14 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+   
 
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "types": ["react", "node"]
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
