publish message rabbitMQ

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Example .env file
 
+
 # Database connection URL
 DATABASE_URL=<your_database_url_here >;
 
@@ -19,3 +20,15 @@ DATABASE_PASS=<your dataBase pass >;
 
 # dataBase uri
 DATABASE_URI= < your dataBase uri >;
+
+#RabbitMQ host
+AMQP_HOST=< your RabbitMQ host >;
+
+#RabbitMQ port
+AMQP_PORT=< your RabbitMQ port >;
+
+#RabbitMQ userName
+AMQP_USERNAME=< your RabbitMQ userName >;
+
+#RabbitMQ password
+AMQP_PASSWORD=< your RabbitMQ password >;
