--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.2.1",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/microservices": "^10.3.7",
     "@nestjs/mongoose": "^10.0.4",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.0",
@@ -31,6 +32,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "compression": "^1.7.4",
+    "dotenv": "^16.4.5",
     "helmet": "^7.1.0",
     "mongoose": "^8.2.4",
     "reflect-metadata": "^0.2.0",
