rabbit-publish-fixed

--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,9 @@ AMQP_USERNAME=< your RabbitMQ userName >;
 
 #RabbitMQ password
 AMQP_PASSWORD=< your RabbitMQ password >;
+
+#RabbitMQExchangeName
+# RABBITMQ_EXCHANGE_NAME=<your RabbitMQExchangeName>;
+
+#RabbitMQQueueName
+# RABBITMQ_QUEUE_NAME=<your RabbitMQQueueName>;
