--- a/.env.example
+++ b/.env.example
@@ -34,7 +34,7 @@ AMQP_USERNAME=< your RabbitMQ userName >;
 AMQP_PASSWORD=< your RabbitMQ password >;
 
 #RabbitMQExchangeName
-# RABBITMQ_EXCHANGE_NAME=<your RabbitMQExchangeName>;
+RABBITMQ_EXCHANGE_NAME=<your RabbitMQExchangeName>;
 
 #RabbitMQQueueName
-# RABBITMQ_QUEUE_NAME=<your RabbitMQQueueName>;
+RABBITMQ_QUEUE_NAME=<your RabbitMQQueueName>;
