--- a/workers-frontend/package.json
+++ b/workers-frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "@types/react-redux": "^7.1.33",
     "axios": "^1.6.8",
     "react": "^18.2.0",
