--- a/workers-frontend/package.json
+++ b/workers-frontend/package.json
@@ -21,8 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
-    "styled-components": "^6.1.8"
-    "react-dom": "^18.2.0",
+    "styled-components": "^6.1.8",   
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
