--- a/workers-frontend/package.json
+++ b/workers-frontend/package.json
@@ -10,14 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.15.15",
+    "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
-
-    "styled-components": "^6.1.8",
-    "react-dom": "^18.2.0",
-
-    "react-redux": "^9.1.0"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.73",
