--- a/workers-frontend/package.json
+++ b/workers-frontend/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "@types/react-redux": "^7.1.33",
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
