--- a/workers-backend/package.json
+++ b/workers-backend/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^16.4.5",
     "helmet": "^7.1.0",
     "mongoose": "^8.2.4",
+    "react-router-dom": "^6.23.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
@@ -46,6 +47,7 @@
     "@types/jest": "^29.5.12",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.3.1",
+    "@types/react-router-dom": "^5.3.3",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
