--- a/workers-frontend/package.json
+++ b/workers-frontend/package.json
@@ -20,6 +20,7 @@
     "@types/react-redux": "^7.1.33",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
+    "mongoose": "^8.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
