--- a/workers-backend/package.json
+++ b/workers-backend/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^16.4.5",
     "helmet": "^7.1.0",
     "mongoose": "^8.2.4",
+    "react-router-dom": "^6.23.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
