--- a/workers-frontend/package.json
+++ b/workers-frontend/package.json
@@ -30,6 +30,7 @@
     "styled-components": "^6.1.9"
   },
   "devDependencies": {
+    "@types/node": "^20.14.1",
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
