--- a/workers-backend/package.json
+++ b/workers-backend/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^10.3.5",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/microservices": "^10.3.7",
     "@nestjs/mongoose": "^10.0.4",
     "@nestjs/passport": "^10.0.3",
@@ -37,6 +38,7 @@
     "helmet": "^7.1.0",
     "mongoose": "^8.4.1",
     "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
