--- a/workers-backend/package.json
+++ b/workers-backend/package.json
@@ -35,6 +35,7 @@
     "compression": "^1.7.4",
     "dotenv": "^16.4.5",
     "helmet": "^7.1.0",
+    "lint": "^0.8.19",
     "mongoose": "^8.4.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
