update env vars

--- a/workers-backend/.env.example
+++ b/workers-backend/.env.example
@@ -21,11 +21,8 @@ DATABASE_PASS=<your dataBase pass >;
 # dataBase uri
 DATABASE_URI= < your dataBase uri >;
 
-#RabbitMQ host
-AMQP_HOST=< your RabbitMQ host >;
-
-#RabbitMQ port
-AMQP_PORT=< your RabbitMQ port >;
+#RabbitMQ url
+AMQP_URL=< your RabbitMQ url >;
 
 #RabbitMQ userName
 AMQP_USERNAME=< your RabbitMQ userName >;
