--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^10.3.9",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/microservices": "^10.3.7",
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/passport": "^10.0.3",
@@ -36,7 +37,7 @@
     "dotenv": "^16.4.5",
     "helmet": "^7.1.0",
     "jwks-rsa": "^3.1.0",
-    "mongoose": "^8.4.1",
+    "mongoose": "^8.5.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
