--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,34 @@
+// {
+//   "compilerOptions": {
+//     "module": "commonjs",
+//     "declaration": true,
+//     "removeComments": true,
+//     "emitDecoratorMetadata": true,
+//     "experimentalDecorators": true,
+//     "allowSyntheticDefaultImports": true,
+//     "target": "ES2021",
+//     "sourceMap": true,
+//     "outDir": "./dist",
+//     "baseUrl": "./",
+//     "incremental": true,
+//     "skipLibCheck": true,
+//     "strictNullChecks": false,
+//     "noImplicitAny": false,
+//     "strictBindCallApply": false,
+//     "forceConsistentCasingInFileNames": false,
+//     "noFallthroughCasesInSwitch": false,
+//   },
+//   "watchOptions": {
+//     "watchFile": "dynamicPriorityPolling",
+//     "watchDirectory": "dynamicPriorityPolling",
+//     "excludeDirectories": [
+//       "**/node_modules",
+//       "dist"
+//     ]
+//   }
+// }
+
+
 {
   "compilerOptions": {
     "module": "commonjs",
@@ -17,13 +48,4 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-  },
-  "watchOptions": {
-    "watchFile": "dynamicPriorityPolling",
-    "watchDirectory": "dynamicPriorityPolling",
-    "excludeDirectories": [
-      "**/node_modules",
-      "dist"
-    ]
-  }
-}
+  },}
