--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
 env:
   PROJECT_ID: fintegrate-f
   GAR_LOCATION: us-central1
-  SERVICE: workers
+  SERVICE: ${{ github.event.repository.name }}
   REGION: us-central1
   REPO: fintegrate
   IMAGE: infrastructure-workers
