--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "compression": "^1.7.4",
     "dotenv": "^16.4.5",
     "fintegrate-auth": "^1.0.131",
+    "googleapis": "^144.0.0",
     "helmet": "^7.1.0",
     "jwks-rsa": "^3.1.0",
     "mongoose": "^8.4.1",
